fixed mobile header menu, there is no longer a gap between the header and the menu open, adjusted hamburger icon when in the 'X' position

--- a/frontend/src/components-css/Header.css
+++ b/frontend/src/components-css/Header.css
@@ -126,20 +126,21 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to bottom, rgba(51, 51, 51, 0.2), rgba(51, 51, 51, 1) 18% );
+  background: #333;
   position: absolute;
-  top: 85px; /* Adjust this value to position the menu below the header */
+  top: 40px; /* Adjust this value to position the menu below the header */
+  padding-top: 20px;
   padding-bottom: 15px;
   left: 0;
   right: 0;
   visibility: visible;
   transform: translateY(0);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.5s ease-in-out;
   z-index: 1;
 }
 
 .header.open .menu-icon .bar:nth-child(1) {
-  transform: translateY(5px) rotate(45deg);
+  transform: translateY(9px) rotate(45deg);
 }
 
 .header.open .menu-icon .bar:nth-child(2) {
